--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.8.1",
+    "hoek": "^5.0.4",
     "node": "^9.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
